--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -18,14 +18,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/view_current_table"
+            android:id="@+id/booking_current_table"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="159dp"
             android:layout_marginTop="22dp"
             android:layout_marginEnd="88dp"
             android:layout_marginBottom="16dp"
-            android:text="@string/current_table"
+            android:text="@string/booking_current_table"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_back_booking"
