--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -132,7 +132,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/exitButton_id"
+        android:id="@+id/createBookingButton_id"
         android:layout_width="200dp"
         android:layout_height="70dp"
         android:text="@string/createButton_id"
